@@ -1,3 +1,8 @@
+2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/C/figures/battstat-preferences.png:
+	* docs/battstat.xml: Update documentation for GNOME 2.10.
+
 2005-02-27  Ryan Lortie  <desrt@desrt.ca>
 
 	* battstat_applet.c: Don't leak style while handling the
